# LAB-3SEM

./: README.md
LAB1/: CMakeLists.txt  DynamicArray.h  LinkedList.h  README.md  README.txt  SmartPointer.h  UI.h  main.cpp  structure.rtf  tests.cpp  timing.cpp  timing.h
LAB1/include/: tests.h
LAB1/src/: UI.cpp
LAB2/: CMakeLists.txt  README.md
LAB2/data/: people.rtf  people.txt
LAB2/include/: CSVParser.h  Complex.h  MainWindow.h  Person.h  tests.h
LAB2/include/algorithms/: Comparators.h  Sorts.h
LAB2/include/data_structures/: LinkedList.h
LAB2/include/sequences/: ArraySequence.h  ListSequence.h
LAB2/src/: CSVParser.cpp  MainWindow.cpp  main.cpp
LAB3/: CMakeLists.txt  MainWindow.h  MemoryManager.cpp  MemoryManager.h  README.md  backpack.cpp  backpack.h  main.cpp
LAB3/data_structures/: DynamicArray.h
LAB3/sequences/: ArraySequence.h  Sequence.h
LAB4/: README.md  main.cpp
LAB4/headers/: CMakeLists.txt  UI.h  algorithms.h  tests.h
LAB4/headers/data_structures/: DynamicArray.h  Graph.h  HashTable.h  LinkedList.h
LAB4/headers/sequences/: ArraySequence.h  ListSequence.h
